# Bangali-Pola

./: .gitignore  README.md  app.py  banner.py  generate_prompts.py  main.py  prompts.yml  pyproject.toml  requirements.txt
tools/: search_stock_price.py  search_web.py
