[project]
name = "baal-chera-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ddgs>=9.11.2",
    "duckduckgo-search>=8.1.1",
    "gradio>=6.9.0",
    "huggingface-hub>=1.6.0",
    "llama-cpp-python>=0.3.16",
    "python-dotenv>=1.2.2",
    "yfinance>=1.2.0",
]
